admin-backend/src/main/java/com/example/backend/common/Error/CommonError.java
package com.example.backend.common.Error;

public interface CommonError {
    public int getErrCode();

    public String getErrMsg();

    public CommonError setErrMsg(String errMsg);
}